--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:100" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" type="image/png" href="img/LOGO_SMARTTECH_2.png">
 </head>
 
 <body>
@@ -82,9 +83,9 @@
             <h4 class="roletitle">Responsable de Comunicación</h4>
             <p class="biotext">Mexico, 1994. Conocí AdaLab porque descubrí que quería reinventarme como programadora, conocer gente interesante y descubrir lo buena que soy para algo que me encanta.
             </p>
-            <a href="https://www.linkedin.com/in/atzin-escandia-camargo/"><img src="img/twitter.png" class="social-icons" alt=""></a>
-            <a href="https://twitter.com/EscandiaCamargo?lang=es"><img src="img/linkedin.png" class="social-icons" alt=""></a>
-            <a href="https://github.com/Escandia"><img src="img/github.png" class="social-icons" alt=""></a>
+            <a href="https://www.linkedin.com/in/atzin-escandia-camargo/" target="_blank"><img src="img/twitter.png" class="social-icons" alt=""></a>
+            <a href="https://twitter.com/EscandiaCamargo?lang=es" target="_blank"><img src="img/linkedin.png" class="social-icons" alt=""></a>
+            <a href="https://github.com/Escandia" target="_blank"><img src="img/github.png" class="social-icons" alt=""></a>
         </div>
 
         <div class="column1-5">
@@ -94,9 +95,9 @@
             <h4 class="roletitle">Responsable de Eventos</h4>
             <p class="biotext">Madrid, 1991. Llegué a Adalab por las ganas de aprender algo nuevo y formarme en el lenguaje de la programación.
             </p>
-            <a href="https://twitter.com/CamblorMarina"><img src="img/twitter.png" class="social-icons" alt=""></a>
-            <a href="https://www.linkedin.com/in/marinacamblorvidal/"><img src="img/linkedin.png" class="social-icons" alt=""></a>
-            <a href="https://github.com/mcvcamblor"><img src="img/github.png" class="social-icons" alt=""></a>
+            <a href="https://twitter.com/CamblorMarina" target="_blank"><img src="img/twitter.png" class="social-icons" alt=""></a>
+            <a href="https://www.linkedin.com/in/marinacamblorvidal/" target="_blank"><img src="img/linkedin.png" class="social-icons" alt=""></a>
+            <a href="https://github.com/mcvcamblor" target="_blank"><img src="img/github.png" class="social-icons" alt=""></a>
         </div>
 
         <div class="column1-5">
@@ -106,9 +107,9 @@
             <h4 class="roletitle">Responsable de Aprendizaje</h4>
             <p class="biotext">Gata pepinera, 1992. He llegado a Adalabab porque nací de nalgas y tengo suerte “de oca a oca y tiro porque me toca”. ¡Muerte a las páginas feas!
             </p>
-            <a href="https://twitter.com/lilit_ks?lang=es"><img src="img/twitter.png" class="social-icons" alt=""></a>
-            <a href="https://www.linkedin.com/in/leila-castillo-nieto/"><img src="img/linkedin.png" class="social-icons" alt=""></a>
-            <a href="https://github.com/lilitks"><img src="img/github.png" class="social-icons" alt=""></a>
+            <a href="https://twitter.com/lilit_ks?lang=es" target="_blank"><img src="img/twitter.png" class="social-icons" alt=""></a>
+            <a href="https://www.linkedin.com/in/leila-castillo-nieto/" target="_blank"><img src="img/linkedin.png" class="social-icons" alt=""></a>
+            <a href="https://github.com/lilitks" target="_blank"><img src="img/github.png" class="social-icons" alt=""></a>
         </div>
 
         <div class="column1-5">
@@ -118,9 +119,9 @@
             <h4 class="roletitle">Responsable de Trabajo en Equipo</h4>
             <p class="biotext">Madrid, 1979. Conocí Adalab buscando información sobre programación de paginas web ya que quería cambiar de profesión.
             </p>
-            <a href="https://twitter.com/susanalozanoadr?lang=e"><img src="img/twitter.png" class="social-icons" alt=""></a>
-            <a href="https://www.linkedin.com/in/susana-lozano-adrio-145650141/"><img src="img/linkedin.png" class="social-icons" alt=""></a>
-            <a href="https://github.com/susanalozanoadrio"><img src="img/github.png" class="social-icons" alt=""></a>
+            <a href="https://twitter.com/susanalozanoadr?lang=e" target="_blank"><img src="img/twitter.png" class="social-icons" alt=""></a>
+            <a href="https://www.linkedin.com/in/susana-lozano-adrio-145650141/" target="_blank"><img src="img/linkedin.png" class="social-icons" alt=""></a>
+            <a href="https://github.com/susanalozanoadrio" target="_blank"><img src="img/github.png" class="social-icons" alt=""></a>
         </div>
 
         <div class="column1-5">
@@ -130,45 +131,45 @@
             <h4 class="roletitle">Responsable de Planificación</h4>
             <p class="biotext">Madrid, 1986. Aunque tenía una pequeña base de programación autodidacta, llegué a Adalab con la idea de convertirme en una profesional del desarrollo front-end.
             </p>
-            <a href="https://twitter.com/iamevamillan?lang=es"><img src="img/twitter.png" class="social-icons" alt=""></a>
-            <a href="https://www.linkedin.com/in/eva-mill%C3%A1n-38369151/"><img src="img/linkedin.png" class="social-icons" alt=""></a>
-            <a href="https://github.com/evamillan"><img src="img/github.png" class="social-icons" alt=""></a>
+            <a href="https://twitter.com/iamevamillan?lang=es" target="_blank"><img src="img/twitter.png" class="social-icons" alt=""></a>
+            <a href="https://www.linkedin.com/in/eva-mill%C3%A1n-38369151/" target="_blank"><img src="img/linkedin.png" class="social-icons" alt=""></a>
+            <a href="https://github.com/evamillan" target="_blank"><img src="img/github.png" class="social-icons" alt=""></a>
         </div>
     </div>
     <a name="roles"></a>
-    <div class="container yellow center">
+    <div class="container yellow center roles">
 
         <div class="columnswrapper">
 
-            <div class="column1-5">
+            <div class="rol-size column1-5">
                 <div class="icono1box iconobox"></div>
-                <h3 class="rol">Responsable de Comunicación</h3>
+                <h3 class="rol">Responsable Comunicación</h3>
                 <p>Responsable de comunicar los logros grupales con la organización, el equipo y en redes sociales.</p>
             </div>
 
-            <div class="column1-5">
+            <div class="rol-size column1-5">
                 <div class="icono2box iconobox"></div>
-                <h3 class="rol">Responsable de Eventos</h3>
+                <h3 class="rol">Responsable Eventos</h3>
                 <p>Encargada de elaboración, asistencia y comunicación de calendarios de eventos.
                 </p>
             </div>
 
-            <div class="column1-5">
+            <div class="rol-size column1-5">
                 <div class="icono3box iconobox"></div>
-                <h3 class="rol">Responsable de Aprendizaje</h3>
+                <h3 class="rol">Responsable Aprendizaje</h3>
                 <p>Se asegura de que todos los miembros de equipo alcancen lo objetivos individuales en el sprint y promueve la ayuda en equipo.</p>
             </div>
 
-            <div class="column1-5">
+            <div class="rol-size column1-5">
                 <div class="icono4box iconobox"></div>
-                <h3 class="rol">Responsable de Equipo</h3>
+                <h3 class="rol">Responsable Equipo</h3>
                 <p>Reponsable del trabajo equitativo en equipo y de cumplir los objetivos grupales marcados en el sprint.</p>
             </div>
 
 
-            <div class="column1-5">
+            <div class="rol-size column1-5">
                 <div class="icono5box iconobox"></div>
-                <h3 class="rol">Responsable de Planificación</h3>
+                <h3 class="rol">Responsable Planificación</h3>
                 <p>Utiliza Trello como herramienta para definir responsables, tareas, tiempos y modificaciones si fueran necesarias.</p>
             </div>
 
@@ -176,12 +177,12 @@
     </div>
 
     <div class="footer">
-        <h4><a href="http://adalab.es/">Adalab</a></h4>
-        <p class="p-footer">Coworking la Terminal en C/Martín de Vargas, nº40, 28005, Madrid</p>
+        <h4><a class="adalab-hover" href="http://adalab.es/" target="_blank">Adalab</a></h4>
+        <p class="p-footer"><a class="adalab-hover" target="_blank" href="https://www.google.es/maps/place/La+Terminal/@40.4015502,-3.7031849,17z/data=!3m1!4b1!4m5!3m4!1s0xd4226328d5880cd:0x1b515d165c092e8c!8m2!3d40.4015461!4d-3.7009962?hl=en">Coworking la Terminal en C/Martín de Vargas, nº40, 28005, Madrid</a></p>
         <ul>
-            <li class="li-footer"><a href="https://twitter.com/AdaLab_Digital">Twitter</a></li>
-            <li class="li-footer"><a href="https://www.facebook.com/AdaLabDigital/">Facebook</a></li>
-            <li class="li-footer"><a href="https://www.linkedin.com/company/adalab">Linkedin</a></li>
+            <li class="li-footer"><a href="https://twitter.com/AdaLab_Digital" target="_blank">Twitter</a></li>
+            <li class="li-footer"><a href="https://www.facebook.com/AdaLabDigital/" target="_blank">Facebook</a></li>
+            <li class="li-footer"><a href="https://www.linkedin.com/company/adalab" target="_blank">Linkedin</a></li>
         </ul>
     </div>
 
